--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -2,6 +2,12 @@
     padding:20px 0;
 }
 
+.container{
+    padding:20px;
+    border-bottom: 1px solid #555;
+    box-sizing: border-box;
+}
+
 .appTitle{
     text-align: center;
 }
