--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,7 +1,58 @@
 .someClass {
-
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 20px 0;
 }
 
-.error {
-    border: 1px solid red;
+
+.inputBlock {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    height: 65px;
 }
+
+.spanError{
+    color:red;
+}
+
+.totalUsers {
+    margin-left: 10px;
+}
+
+
+.button {
+    background-image: linear-gradient(to right, #C04848 0%, #480048 51%, #C04848 100%);
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-position: right center;
+    color: #fff;
+    text-decoration: none;
+}
+
+.button:disabled{
+    opacity: .7;
+    background-position: center right;
+    cursor: not-allowed;
+}
+
+.button:disabled:hover{
+    background-position: center right;
+}
+
