--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -5,9 +5,11 @@
 .column {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
+    padding: 20px;
 }
 
 .testSpanError {
     color: blue;
 }
+
