--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,12 +1,44 @@
 .superInput {
+    margin: 10px;
+    margin-left: 0;
+    padding: 13px 10px;
+    min-width: 250px;
+    transition: 0.3s;
+    background-size: 200% auto;
+    color: #000;
+    border-radius: 10px;
+    display: block;
+    outline: none;
+    cursor:text;
+    border: 2px solid #7257a8;
+}
 
+.superInput:focus{
+    border: 2px solid #9877e8;
+    box-shadow: 0 0 10px #7257a8;
 }
 
 .errorInput {
-    border: 3px solid lime;
-    background: red;
+    border: 2px solid #ff0000;
+}
+
+.errorInput:focus{
+    border: 2px solid #ff0000;
+    box-shadow: 0 0 10px #ff0000;
+}
+
+.superInputBlock{
+    display: flex;
+    justify-content: start;
+    align-items: center;
 }
 
 .error {
-    color: red;
+    margin: 0;
+    color: #e31d1d;
+}
+
+.superInputBlock .error {
+    margin: 10px;
+    color: #e31d1d;
 }
