--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,5 +1,16 @@
-.checkbox {
+.labelForSuperCheckbox {
+    padding:5px 10px;
+    cursor:pointer;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
 
+.checkbox{
+    cursor:pointer;
+    width: 18px;
+    height: 18px;
+    margin-right: 5px;
 }
 
 .spanClassName {
